--- a/src/main/resources/templates/myPurchasedTickets1.html
+++ b/src/main/resources/templates/myPurchasedTickets1.html
@@ -398,7 +398,7 @@
     
    <div class="back-btn" th:unless="${purchasedPassengers.empty}">
     <button onclick="location.href='/user/home'" class="action-btn">
-        <i class="fas fa-arrow-left"></i> Back to Dashboard
+        Back to Dashboard
     </button>
 </div>
 </div>
