--- a/src/main/resources/templates/sellTicket1.html
+++ b/src/main/resources/templates/sellTicket1.html
@@ -425,8 +425,7 @@
 
 <div style="text-align: center; margin-top: 20px;">
     <a th:href="@{/user/home}">
-        <button class="btn btn-secondary">
-            <i class="fas fa-arrow-left"></i> Back to Home
+        <button class="btn btn-secondary"> Back to Home
         </button>
     </a>
 </div>
