--- a/src/main/resources/templates/myListedTickets.html
+++ b/src/main/resources/templates/myListedTickets.html
@@ -366,7 +366,7 @@
     
     <div class="back-btn" th:unless="${pnrs.empty}">
         <a href="/user/home" class="action-btn">
-            <i class="fas fa-arrow-left"></i> Back to Dashboard
+             Back to Dashboard
         </a>
     </div>
 </div>
