Added Referral Reward

--- a/src/main/resources/templates/userHome.html
+++ b/src/main/resources/templates/userHome.html
@@ -595,7 +595,7 @@
         </li>
         <li>
           <a th:href="@{/user/refer}" class="menu-item">
-            <i class="fas fa-user-plus"></i>
+            <i class="fas fa-users"></i>
             <span>Refer A Friend</span>
           </a>
         </li>
@@ -698,7 +698,7 @@
         <p>Invite friends and earn bonuses when they join</p>
         <form th:action="@{/user/refer}" method="get">
           <button class="button">
-            <i class="fas fa-user-plus"></i>
+            <i class="fas fa-users"></i>
             <span>Invite Now</span>
             <i class="fas fa-chevron-right arrow-icon"></i>
           </button>
